# x402-hackathon

./: .gitignore  .gitmodules  README.md
apps/demo-client/: README.md  benchmark.ts  config.example.json  index.ts  package.json  plan.md  tsconfig.json
apps/sequencer/: Cargo.toml  Dockerfile  README.md  plan.md
apps/sequencer/src/: config.rs  crypto.rs  db.rs  error.rs  handlers.rs  main.rs  model.rs  openapi.rs  service.rs
apps/service/: Dockerfile  hello-world-service.md  index.js  package.json  plan.md
contracts/hardhat/: Dockerfile  hardhat.config.ts  package.json  plan.md
contracts/hardhat/contracts/: TestUSDC.sol  X402CheddrPaymentChannel.sol
contracts/hardhat/ignition/modules/: X402.ts
contracts/hardhat/scripts/: deploy.ts  docker-start.sh
docs/: hackathon-checklist.md  protocol-scheme-design.md  sequencer-openapi.yaml  x402-eip155-cpc-schema.md
infra/: bootstrap-hardhat.sh  docker-compose.yml  facilitator-config.json  gen-ports-env.sh  generate-env.sh  ports.env.example  update-channel-manager-env.sh
scripts/: render-mermaid.sh  reset-chain.sh  run-benchmark.sh  run-demo-client.sh  run-demo.sh
scripts/demo/: 01-handshake.sh  02-first-request.sh  03-subsequent-request.sh  04-benchmark.sh  lib.sh  run.sh
