[package]
name = "cpc-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
ethers-contract = "2.0.14"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
